Adicionando um Array de todos os valores que o usario inseriu e uma mensagem exibindo todos os valores que o usario inseriu e mostranndo tambem o cpf do usario

--- a/Aula git.html
+++ b/Aula git.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bora Codar</title>
-    <script>src="Aula git.js"</script>
+    <h1>Bora Codar</h1>
+    <script src="Aula git.js"></script>
 </head>
 <body>
     
